# ccs-sdk

./: .env.example  .gitignore  BOUNTY_LEDGER.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  demo_fail_closed.py  paper-timestamp.ots  pyproject.toml  strict_9test.py  test_async_generator.py
.github/workflows/: ci.yml
ccs/: __init__.py  adapters.py  core.py  guardrail.py
ccs/mcp_server/: __init__.py  __main__.py  server.py
ccs/mcp_v2/: __init__.py  cli.py  detector.py
docs/: performance_test_20260709.md
go/: README.md  go.mod
go/ccs/: core.go  core_test.go  guardrail.go
tests/: test_core.py
ts/: README.md  package-lock.json  package.json
ts/src/: core.ts  guardrail.ts  index.ts
ts/src/mcp_v2/: detector.ts  index.ts  types.ts
